data/all_generated_tests/raw_wast_tests/loop_StackCorruption_369.wast
;; 10. **Test Description:**    - Ensuring correct stack behavior when loop involves multiple types of branches.    - **Constraint Checked:** Uses mixed `br`, `br_if`, and `br_table` instructions within loops.    - **Relation to Stack Corruption:** Misinterpreting mixed branches can disrupt stack correctness.    ```wasm    (module      (func (export "test") (result i32)        i32.const 0        loop (result i32)          i32.const 1          br_table 0 1 2          i32.const 42)      (if) (then)          br 1      (else)          i32.const 2          br_if 0)        end        drop        i32.const 3))    )    ```

(assert_invalid
  (module
    (func (export "test") (result i32)
      i32.const 0
      loop (result i32)
        i32.const 1
        br_table 0 1 2
        i32.const 42
        if
          br 1
        else
          i32.const 2
          br_if 0
        end
      end
      drop
      i32.const 3
    )
  )
  "type mismatch"
)